# ai_attendant

./: LICENSE  README.md  main.py  pyproject.toml
src/: crew.py  crewai_agents.py  evo_recebe.py  main.py  message_interpreter.py  sender_message.py  teste_api.py
src/test/: evo_recebe.py  teste_api.py
